--- a/hearth_stone/style.css
+++ b/hearth_stone/style.css
@@ -1,16 +1,29 @@
-html{
-    font-size: 14px;
-    line-height: 22px;
-    color: #86918c;
-    font-family: "Arial";
-}
 tr{
     background: #0d131b;
+}
+td{
+    padding: 0;
 }
 .wrapper{
     padding-left: 40px;
     padding-right: 40px;
     padding-bottom: 60px;
+}
+.bottom-wrapper{
+    padding-left: 55px;
+    padding-right: 55px;
+}
+p.mgnone{
+    margin: 0;
+    text-align: center;
+}
+.mgbottom{
+    margin-top: 0;
+    margin-bottom: 20px;
+}
+.mg-bottom-h2{
+    margin-top: 0;
+    margin-bottom: 55px;
 }
 .yellow-txt{
     color: #e8a336;
@@ -30,20 +43,28 @@ tr{
 .purple-txt{
     color: #9f15a9;
 }
+
+
 .main{
     width: 600px;
+    margin: auto;
     border-collapse: collapse;
+    font-size: 14px;
+    color: #86918c;
+    font-family: "Arial";
 }
 h1,
 h2,
 h3,
-.button a{
+.button,
+.center{
     text-align: center;
 }
 h1{
     font-size: 55px;
     color: #20b4bb;
     font-weight: bold;
+    margin: 0;
 }
 h2,
 .h3{
@@ -55,13 +76,11 @@ h2,
     font-size: 24px;
 }
 h3{
-    margin-bottom: 20px;
+    margin-bottom: 30px;
 }
 p{
     margin-bottom: 40px;
-}
-.button{
-    width: 300px;
+    line-height: 1.5em;
 }
 .button a{
     padding-top: 17px;
@@ -74,10 +93,14 @@ p{
     line-height: 22px;
     color: #fffff8;
     font-weight: bold;
-    text-align: center;
     text-decoration: none;
     border-radius: 3px;
-    
+}
+.line{
+    padding-bottom: 70px;
+}
+.line-img{
+    padding-bottom: 40px;
 }
 .bottom{
     background: #eed3a8;
