--- a/hata_plus/style.css
+++ b/hata_plus/style.css
@@ -1,6 +1,8 @@
 .main{
     width: 1000px;
     margin: 0 auto;
+    font-size: 13px;
+    font-family: "Arial";
     background: #f5f5f5;
     border-collapse: collapse;
 }
@@ -16,6 +18,15 @@ td{
     padding-left: 30px;
     padding-right: 30px;
     background: #fff;
+}
+
+
+
+
+/* ------ */
+/* Верх листа */
+.align-txt{
+    text-align: right;
 }
 
 
