--- a/hata_plus/style.css
+++ b/hata_plus/style.css
@@ -1,3 +1,6 @@
+body{
+    margin: 0;
+}
 .main{
     width: 1000px;
     margin: 0 auto;
@@ -5,6 +8,7 @@
     font-family: "Arial";
     background: #f5f5f5;
     border-collapse: collapse;
+    color: #9999a6;
 }
 .bg-grey{
     background-color: #dcdce5;
@@ -12,15 +16,35 @@
 td{
     padding: 0;
 }
+.wrapper,
+.midle{
+    background: #fff;
+}
 .wrapper{
     width: 600px;
     margin: 0 auto;
     padding-left: 30px;
     padding-right: 30px;
-    background: #fff;
 }
-
-
+.w100{
+    width: 100%;
+}
+.main .mg-none,
+h3{
+    margin: 0;
+}
+.battom{
+    padding-top: 15px;
+    padding-right: 25px;
+    padding-bottom: 15px;
+    padding-left: 25px;
+    font-size: 14px;
+    color: #ffffff;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;  
+    border-radius: 50px;
+}
 
 
 /* ------ */
@@ -28,17 +52,106 @@ td{
 .align-txt{
     text-align: right;
 }
+.tell{
+    margin-bottom: 0;
+}
+.tell a{
+    margin-left: 10px;
+    font-size: 16px;
+    color: #25252c;
+    font-weight: bold;
+    text-decoration: none;
+}
+.about-phone{
+    margin-top: 0;
+}
 
 
+/* ------ */
+/* середина листа */
+.about-company{
+    padding-top: 35px;
+    padding-bottom: 50px;
+}
+h1{
+    font-size: 24px;
+    color: #24242b;
+    font-weight: bold;
+    margin: 0;
+    margin-bottom: 25px;
+}
+.about-company p{
+    margin-bottom: 30px;
+    font-size: 14px;
+    line-height: 24px;
+    color: #666666;
+}
+.about-company a{
+    background: #fd8300;
+}
+h3 a{
+    font-size: 16px;
+    color: #1f1f56;
+    font-weight: bold;
+    text-decoration: none;
+}
+.house-one,
+.house-two,
+.house-tree{
+    padding-top: 20px;
+    padding-bottom: 25px;
+    border-bottom-width: 2px;
+    border-bottom-color: #dadae2;
+    border-bottom-style: solid;
+}
+.house-tree{
+    border: none;
+}
+.house-one-txt{
+    padding-top: 5px;
+    padding-left: 20px;
+    vertical-align: top;
+    line-height: 19px;
+}
+.house-two-txt{
+    padding-top: 5px;
+    padding-right: 20px;
+    vertical-align: top;
+    line-height: 19px; 
+}
+.sale_bg{
+    background-image: url(https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/bg-sale.jpg);
+}
+.sale{
+    padding-top: 35px;
+    padding-bottom: 35px;
+    color: #fff;
+    text-align: center;
+}
+.sale h2{
+    margin: 0;
+    margin-bottom: 12px;
+    font-size: 24px;
+}
+.sale p{
+    margin-bottom: 30px;
+    line-height: 20px;
+}
+.sale a{
+    background: #1f1f55;
+}
 
-
-
+/* ------ */
+/* низ листа */  
 .bottom{
     padding-top: 30px;
     color: #9999a6;
     text-align: center;
-    vertical-align: middle;
     background: #08081a;
+}
+.bottom img{
+    margin-left: 10px;
+    vertical-align: middle;
 }
 .copy{
     margin: 22px;
@@ -46,9 +159,19 @@ td{
 .about-bottom{
     margin: 0;
     padding: 15px;
+    font-size: 0px;
     background: #000014;
 }
 .about-bottom a{
+    font-size: 11px;
     color: #fd8300;
     text-decoration: none;
+    padding-left: 7px;
+}
+.right-line{
+    padding-right: 7px;
+    padding-left: 0;
+    border-right-width: 1px;
+    border-right-color: #763d0b;
+    border-right-style: solid;
 }
