--- a/hata_plus/style.css
+++ b/hata_plus/style.css
@@ -1,12 +1,11 @@
-body{
-    margin: 0;
+table{
+    border-collapse: collapse;
 }
 .main{
     margin: 0 auto;
     font-size: 13px;
     font-family: "Arial";
     background: #f5f5f5;
-    border-collapse: collapse;
     color: #9999a6;
 }
 .bg-grey{
@@ -19,9 +18,11 @@ td{
 .midle{
     background: #fff;
 }
-.wrapper{
+.midle{
     width: 47.5%;
     margin: 0 auto;
+}
+.wrapper{
     padding-left: 30px;
     padding-right: 30px;
 }
@@ -48,11 +49,15 @@ h3{
 
 /* ------ */
 /* Верх листа */  
+.header{
+    padding-top: 12px;
+    padding-bottom: 12px;
+}
 .align-txt{
     text-align: right;
 }
 .tell{
-    margin-bottom: 0;
+    margin-bottom: 5px;
 }
 .tell a{
     margin-left: 10px;
@@ -169,7 +174,7 @@ h3 a{
     background: #08081a;
 }
 .bottom img{
-    margin-left: 10px;
+    margin-left: 5px;
     vertical-align: middle;
 }
 .copy{
